--- a/.dockerignore
+++ b/.dockerignore
@@ -22,6 +22,26 @@ recordings/
 **/__pycache__/
 **/*.egg-info/
 # ignore isaac sim symlink
-_isaac_sim?
+_isaac_sim
 # Docker history
 docker/.isaac-lab-docker-history
+
+# Ignore folders with heavy content
+datasets/
+logs/
+output/
+models/
+data_storage/
+_isaac_sim/
+*.zip
+*.7z
+.gitmodules
+*.py[cod]
+__pycache__/
+*.log
+*.md
+*.zip
+*.7z
+*.egg-info
+build/
+dist/
